# buildpacks-go

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  buildpack.toml  inventory.toml  notes.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  inventory.yml  prepare-release.yml  release.yml
buildpacks/go/: CHANGELOG.md  Cargo.toml  buildpack.toml  inventory.toml
buildpacks/go/src/: cfg.rs  cmd.rs  exec_env.rs  inv.rs  main.rs  proc.rs  tgz.rs  vrs.rs
buildpacks/go/src/layers/: build.rs  deps.rs  dist.rs  mod.rs  target.rs
buildpacks/go/tests/: integration_test.rs
buildpacks/go/tests/fixtures/basic_http_116/: main.go
buildpacks/go/tests/fixtures/basic_http_119/: main.go
buildpacks/go/tests/fixtures/basic_http_122/: go.mod  main.go
buildpacks/go/tests/fixtures/go_test_125/: go.mod  go.sum  main.go  main_test.go
buildpacks/go/tests/fixtures/modules_gin_121/: go.mod  main.go
buildpacks/go/tests/fixtures/procfile_http_123/: Procfile  go.mod  main.go
buildpacks/go/tests/fixtures/vendor_fasthttp_120/: main.go
buildpacks/go/tests/fixtures/vendor_gorilla_117/: go.mod  main.go
buildpacks/go/tests/fixtures/worker_http_118/: go.mod
buildpacks/go/tests/fixtures/worker_http_118/cmd/script/: main.go
common/go-utils/: Cargo.toml
common/go-utils/src/: checksum.rs  inv.rs  lib.rs  vrs.rs
common/inventory-updater/: Cargo.toml
common/inventory-updater/src/: inv.rs  main.rs
common/inventory-utils/: Cargo.toml
common/inventory-utils/src/: checksum.rs  inv.rs  lib.rs  semvrs.rs  tgz.rs  upstream.rs  vrs.rs
docs/: application_spec.md
src/: cfg.rs  cmd.rs  gocmd.rs  godist.rs  gomod.rs  inv.rs  lib.rs  log.rs  main.rs  proc.rs  tgz.rs  vrs.rs
src/layers/: build.rs  deps.rs  dist.rs  mod.rs  target.rs  tmp.rs
tests/: integration_test.rs
tests/fixtures/basic_118/: go.mod  main.go
tests/fixtures/basic_http_116/: go.mod  main.go
tests/fixtures/basic_http_118/: go.mod  main.go
tests/fixtures/basic_http_119/: go.mod
tests/fixtures/modules_118/: go.mod  main.go
tests/fixtures/modules_gin_118/: go.mod  go.sum  main.go
tests/fixtures/modules_gin_121/: go.mod
tests/fixtures/modules_gorilla_117/: go.mod  main.go
tests/fixtures/vendor_fasthttp_120/: go.mod
tests/fixtures/vendor_gin_118/: go.mod  main.go
tests/fixtures/worker_http_118/: go.mod
tests/fixtures/worker_http_118/cmd/web/: main.go
