[workspace]
resolver = "2"
members = ["buildpacks/go", "common/go-utils"]

[workspace.package]
rust-version = "1.84"
edition = "2021"

[workspace.lints.rust]
# Temporarily allow use of deprecated items until all buildpacks migrated away
# from the trait based layer API.
deprecated = "allow"
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
panic_in_result_fn = "warn"
# The explicit priority is required due to https://github.com/rust-lang/cargo/issues/13565.
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[profile.release]
strip = true

[workspace.dependencies]
libcnb = { version = "=0.26.1", features = ["trace"] }
libcnb-test = "=0.26.1"
libherokubuildpack = { version = "=0.26.1", default-features = false, features = [
    "inventory",
    "log",
    "inventory-sha2",
] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
