[workspace]
resolver = "2"
members = ["buildpacks/go", "common/go-utils"]

[workspace.package]
rust-version = "1.89"
edition = "2024"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"
# Allows the usage of cfg(coverage_nightly).
# cargo-llvm-cov enables that config when instrumenting our code, so we can enable
# the experimental coverage_attribute feature.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
panic_in_result_fn = "warn"
# The explicit priority is required due to https://github.com/rust-lang/cargo/issues/13565.
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[profile.release]
strip = true

[workspace.dependencies]
libcnb = { version = "0.30", features = ["trace"] }
libcnb-test = "0.30"
libherokubuildpack = { version = "0.30", default-features = false, features = [
    "inventory",
    "log",
    "inventory-sha2",
] }
semver = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
toml = "0.9"
ureq = { version = "2", features = ["json"] }
