[package]
name = "heroku-go-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
heroku-go-utils = { path = "../../common/go-utils" }
hex = "0.4.3"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
libcnb = { workspace = true }
libherokubuildpack = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tar = { version = "0.4", default-features = false }
thiserror = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
libcnb-test = { workspace = true }
tempfile = "3"
