[package]
name = "heroku-go-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
heroku-go-utils = { path = "../../common/go-utils" }
hex = "0.4.3"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
libcnb = { workspace = true }
libherokubuildpack = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tar = { version = "0.4", default-features = false }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = "0.1"
ureq = { workspace = true }
bullet_stream = "0.7.0"
fun_run = "0.5.0"

[dev-dependencies]
libcnb-test = { workspace = true }
tempfile = "3"
