[package]
name = "heroku-go-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
indoc = "2"
heroku-go-utils = { path = "../../common/go-utils" }
hex = "0.4.3"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
libcnb = { workspace = true }
libherokubuildpack = { workspace = true }
retry = { version = "2.2.0", default-features = false }
semver = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tar = { version = "0.4", default-features = false }
thiserror = { workspace = true }
tracing = "0.1"
ureq = { workspace = true }
bullet_stream = "0.11.0"
fun_run = "0.6.0"

[dev-dependencies]
libcnb-test = { workspace = true }
tempfile = "3"
