[package]
name = "heroku-go-utils"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
regex = "1"
sha2.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true
fs-err.workspace = true
libherokubuildpack.workspace = true
