[package]
name = "heroku-go-utils"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libherokubuildpack = { workspace = true }
regex = "1"
sha2 = { workspace = true }
semver = "1"
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
