[package]
name = "heroku-go-utils"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libherokubuildpack = { workspace = true }
keep_a_changelog_file = "0.1"
regex = "1"
semver = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
