[package]
name = "heroku-inventory-utils"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
flate2 = { version = "1", default-features = false, features = ["zlib"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
sha2 = "0.10"
tar = { version = "0.4", default-features = false }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
