[package]
name = "heroku-inventory-utils"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
hex = "0.4.3"
semver = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
serde_test = "1.0.176"
